Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.


VERSION 2.4.1
  BUGFIXES:
    * Fixed detection of iPod devices.
    * Fixed crash when the lyrics applet was removed and re-added while a
      track was playing and the user pressed "ESC".
    * Fixed cached lyrics were not displayed if no lyrics script was running.
    * Fixed lyrics changes in the TagDialog were not "synchronized" to the
      lyrics applet.
    * Fixed reporting of playback status for MPRIS (both versions).
      (BR 268282)


VERSION 2.4.1-Beta 1
  FEATURES:
    * Remote NFS & SMB/CIFS collections now work! (BR 249760, BR 232976, 
      BR 171213, BR 187692)
    * New "Preview" feature for the Organize Collection dialog. Patch by
      Maximilian Güntner <maximilian.guentner@gmail.com>.
    * String filtering in the albums applet.
    * Ability to change text alignment in the lyrics applet.
    * gpodder.net Service, a Podcast Directory displaying the most used Tags
      from gpodder.net & the top Podcasts of these Tags

  CHANGES:
    * The podcast directory service is now based on incremental parsing of OPML without
      caching in the database.
    * Plugins can now be optionally enabled in the config dialog.
    * Script selector is moved from the menubar to the config dialog.
    * Now all changes to Preset Formats in Organize Collection dialog get saved on close,
      doesn't matter If dialog was accepted or rejected.
    * Added "Update Preset" button to Organize Collection dialog, which updates currently
      choosen scheme.
    * Renewed FilterEditor dialog.
    * Changed tokens syntax in FileNameLayoutDialog (TagGuesser, OrginizeCollection dialogs)
      now tokens wrapped in percent signs (%token% instead of %token).
    * Added ability to guess tags from whole track path. (TagGuesser dialog)
    * Use KDirWatch to watch changes to collection.
    * Do always store track rating as tags in files. Patch by Alan Ezusti
      <alan.ezust@gmail.com>. (BR 259117)